# voice-to-text

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  Directory.Packages.props  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  UniversalDictation.sln  desktop_app_error.txt  package-lock.json  package.json  run.bat  run_scriberx.bat  transcribe.py
.agents/: AGENTS.md  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/auditor_9e84337c/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m1_foundations/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  audit_report.md  handoff.md  progress.md
.agents/e2e_orch/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/explorer_df6a4938/: BRIEFING.md  handoff.md  progress.md
.agents/explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/explorer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m1_remediation/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/explorer_m4_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/explorer_m4_1_retry1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m4_2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/explorer_m4_2_retry1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m4_3/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/explorer_m4_3_retry1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/impl_orch/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  handoff.md  plan.md  progress.md
.agents/reviewer_m1_foundations/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md  review_report.md
.agents/sub_orch_e2e/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  SCOPE.md  handoff.md  progress.md
.agents/sub_orch_m1_foundations/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  SCOPE.md  explorer_report.md  handoff.md  progress.md
.agents/sub_orch_m1_foundations_gen1/: README.md
.agents/sub_orch_m2_core/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  SCOPE.md
.agents/sub_orch_m3_audio/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/sub_orch_m4_transcription/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  SCOPE.md  progress.md
.agents/teamwork_preview_explorer_e2e_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_e2e_setup/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/teamwork_preview_worker_e2e_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/teamwork_preview_worker_e2e_2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_e2e_impl/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_fb63158b/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_m1/: BRIEFING.md  ORIGINAL_REQUEST.md
.agents/worker_m1_foundations/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  plan.md  progress.md
.agents/worker_m1_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_m1_remediation/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_m4_deepgram/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_write_test_infra/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
.agents/worker_write_test_ready/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md
crates/app-shell/: Cargo.toml  tauri.conf.json
crates/app-shell/src/: main.rs
crates/app-shell/tests/: e2e_tests.rs
crates/clinical-safety/: Cargo.toml
crates/core-audio/: Cargo.toml
crates/core-hotkey/: Cargo.toml
crates/core-hotkey/src/: lib.rs
crates/core-wakeword/: Cargo.toml
crates/drug-db-builder/: Cargo.toml
crates/drug-match/: Cargo.toml
crates/emr-adapter/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  PRD.md  STATUS.md  TESTING_INSTRUCTIONS.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/DesktopApp/: App.xaml.cs  (+4 more)
ui/: index.html  main.js  main.ts  style.css
(+80 files in other folders)
