[package]
name = "app-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
core-hotkey = { path = "../core-hotkey" }
core-audio = { path = "../core-audio" }
stt-engine = { path = "../stt-engine" }
drug-match = { path = "../drug-match" }
storage = { path = "../storage" }
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
tauri = { version = "1.6", features = [
  "wry",
  "shell-open",
  "window-close",
  "window-hide",
  "window-set-always-on-top",
  "window-set-position",
  "window-show"
] }

[build-dependencies]
tauri-build = { version = "1.5" }
