[package]
name = "app-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
core-hotkey = { path = "../core-hotkey" }
core-audio = { path = "../core-audio" }
stt-engine = { path = "../stt-engine" }
drug-match = { path = "../drug-match" }
storage = { path = "../storage" }
core-wakeword = { path = "../core-wakeword" }
emr-adapter = { path = "../emr-adapter" }
clinical-safety = { path = "../clinical-safety" }
medical-coding = { path = "../medical-coding" }
tauri = { version = "1.6", features = [
  "wry",
  "shell-open",
  "window-close",
  "window-hide",
  "window-set-always-on-top",
  "window-set-position",
  "window-show"
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
core-hotkey = { path = "../core-hotkey" }
core-audio = { path = "../core-audio" }
drug-match = { path = "../drug-match" }
storage = { path = "../storage" }
core-wakeword = { path = "../core-wakeword" }
emr-adapter = { path = "../emr-adapter" }
clinical-safety = { path = "../clinical-safety" }
medical-coding = { path = "../medical-coding" }

[[test]]
name = "e2e_tests"
path = "tests/e2e_tests.rs"
harness = true

[build-dependencies]
tauri-build = { version = "1.5" }
