[package]
name = "core-hotkey"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Graphics_Gdi"] }
