[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.8", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }

